# complex-cmake

./: CMakeLists.txt
hello/: CMakeLists.txt
hello/src/: hello_main.c
libhello/: CMakeLists.txt
libhello/inc/: hello.h
libhello/src/: hello.c
libhello/test/: CMakeLists.txt  libhello-test1.cpp  libhello-test2.cpp
libhello2/: CMakeLists.txt
libhello2/inc/: hello2.h
libhello2/src/: hello2.c
libhello2/test/: libhello2-test1.cpp  libhello2-test2.cpp
